--- a/css/main.css
+++ b/css/main.css
@@ -2097,17 +2097,18 @@ h1, h2, h3, h4, h5, h6 {
 .main-menu {
   padding-bottom: 20px;
   padding-top: 20px;
-  background: rgba(255, 255, 255, 0.15);
   padding-left: 15px;
   padding-right: 15px;
+  background-color: #000;
 }
 
 #header {
+  background-color: rgba(34, 34, 34, 0.9);
   position: fixed;
   left: 0;
   top: 0;
   right: 0;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   z-index: 997;
 }
 
@@ -2687,10 +2688,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /*-------- end Popular-destination Area ------------*/
 /*-------- start price Area ------------*/
-.price-area {
+/* .price-area {
   background: url(../img/price-bg.png);
   background-size: cover;
-}
+} */
 
 .price-area .single-price {
   background: #fff;
